Fixed horizontal scroll issue

--- a/src/components/formComponents/inputField/styles.scss
+++ b/src/components/formComponents/inputField/styles.scss
@@ -28,11 +28,10 @@
     }
   }
   &__label {
-    font-family: $font;
     font-size: 1.2rem;
     display: block;
     transition: all 0.3s;
-    margin-top: 1rem;
+    // margin-top: .2rem;
     margin-left: 2rem;
   }
   &__input:placeholder-shown + &__label {
