--- a/src/components/formComponents/textArea/styles.scss
+++ b/src/components/formComponents/textArea/styles.scss
@@ -6,7 +6,7 @@
     height: min-content;
     font-family: $font, Arimo;
     font-size: 1.6rem;
-    margin-top: 3rem;
+    // margin-top: 3rem;
     padding: 2.5rem 3rem;
     outline: none;
     border: none;
@@ -28,11 +28,10 @@
     }
   }
   &__label {
-    font-family: $font;
     font-size: 1.2rem;
     display: block;
     transition: all 0.3s;
-    margin-top: 1rem;
+    // margin-top: .5rem;
     margin-left: 2rem;
   }
   &__input:placeholder-shown + &__label {
