--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -4,7 +4,7 @@
   z-index: 100;
   position: absolute;
   top: 0;
-  width: 100vw;
+  width: 100%;
   display: grid;
   grid-template-columns: max-content 1fr max-content;
   align-items: start;
@@ -47,6 +47,5 @@
     display: grid;
     justify-content: flex-end;
     margin-top: .5rem;
-
   }
 }
