--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -248,7 +248,6 @@ h3 {
     justify-self: stretch;
     width: 100%;
     margin-top: 0rem;
-    font-family: $font;
     font-size: 1.4rem;
     color: $greyDarkest;
     cursor: pointer;
